colours changed due to feedback

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Basic C-Sharp Tutorial</title>
   </head>
-  <body style="background-color: #675e5e;">
+  <body style="background-color: #26374D;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
